default/objects/Credit_Factory_Account__c/Credit_Factory_Account__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping for Account</description>
    <label>Credit Factory Account</label>
</CustomObject>