default/objects/Credit_Factory_Account__c/fields/Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Business_Street__c</fullName>
    <label>Business Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>