default/objects/Credit_Factory_Account__c/fields/Bussines_Street_and_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Bussines_Street_and_House_Number__c</fullName>
    <label>Bussines Street and House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>