default/objects/Credit_Factory_Account__c/fields/Company_Form__c.field-meta.xml
<CustomField>
    <fullName>Company_Form__c</fullName>
    <label>Company Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>