default/objects/Credit_Factory_Account__c/fields/Federal_State__c.field-meta.xml
<CustomField>
    <fullName>Federal_State__c</fullName>
    <label>Federal State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>