default/objects/Credit_Factory_Account__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <label>House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>