default/objects/Credit_Factory_Account__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>