default/objects/Credit_Factory_Account__c/fields/Reason_for_fuel_cards__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_fuel_cards__c</fullName>
    <label>Reason for fuel cards</label>
    <length>100</length>
    <type>Text</type>
</CustomField>