default/objects/Credit_Factory_Account__c/fields/SWIFT_BIC__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_BIC__c</fullName>
    <label>SWIFT BIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>